reverting version of the topcoder-app code

--- a/submission-system/docker/frontend/topcoder-app/app/submissions/submit-design-files/submit-design-files.jade
+++ b/submission-system/docker/frontend/topcoder-app/app/submissions/submit-design-files/submit-design-files.jade
@@ -10,7 +10,7 @@
 
 .panel-body
   p.tc-error-messages.submissions-access-error(ng-if="submissions.error", ng-bind="submissions.errorMessage")
-  //- <pre>{{vm.submissionForm}}</pre>
+
   form.form-blocks(ng-if="!submissions.error", name="submissionForm", role="form", ng-submit="submissionForm.$valid && vm.uploadSubmission()", novalidate)
     .form-block.flex
       .form-block__instructions
@@ -27,19 +27,18 @@
 
       .form-block__fields
         .fieldset
-          tc-fp-file-input(
+          tc-file-input.tc-file-field(
             label-text="Submission",
             field-id="SUBMISSION_ZIP",
-            file-type="zip",
             button-text="Add File",
-            services="COMPUTER,GOOGLE_DRIVE,BOX,DROPBOX",
+            file-type="zip",
             show-file-type="true",
             placeholder="Attach all visible files as a single .zip file",
             mandatory="true",
-            ng-model="vm.submissionForm.submissionZip",
-            set-file-reference="vm.setFileReference(file, fieldId)"
+            set-file-reference="vm.setFileReference(file, fieldId)",
+            ng-model="vm.submissionForm.submissionZip"
           )
-          
+
           .tc-error-messages(
             ng-show="submissionForm['SUBMISSION_ZIP'].$touched && submissionForm['SUBMISSION_ZIP'].$invalid",
             ng-messages="submissionForm['SUBMISSION_ZIP'].$error"
@@ -48,19 +47,19 @@
 
             p(ng-message="required") This is not the correct file format. Please select a .zip file.
 
-          tc-fp-file-input.tc-file-field(
+
+          tc-file-input.tc-file-field(
             label-text="Source",
             field-id="SOURCE_ZIP",
-            file-type="zip",
             button-text="Add File",
-            services="COMPUTER,GOOGLE_DRIVE,BOX,DROPBOX",
+            file-type="zip",
             show-file-type="true",
-            placeholder="Attach all visible files as a single .zip file",
+            placeholder="Attach all source files as a single .zip file",
             mandatory="true",
             set-file-reference="vm.setFileReference(file, fieldId)",
             ng-model="vm.submissionForm.sourceZip"
           )
-          
+
           .tc-error-messages(
             ng-show="submissionForm['SOURCE_ZIP'].$touched && submissionForm['SOURCE_ZIP'].$invalid",
             ng-messages="submissionForm['SOURCE_ZIP'].$error"
@@ -69,12 +68,11 @@
 
             p(ng-message="required") This is not the correct file format. Please select a .zip file.
 
-          tc-fp-file-input.tc-file-field(
+          tc-file-input.tc-file-field(
             label-text="Preview Image",
             field-id="DESIGN_COVER",
-            file-type=".jpg,.jpeg,.png",
             button-text="Add File",
-            services="COMPUTER,GOOGLE_DRIVE,BOX,DROPBOX",
+            file-type="jpg,jpeg,png"
             placeholder="Image file as .jpg or .png",
             mandatory="true",
             set-file-reference="vm.setFileReference(file, fieldId)",
